proyect yuc update

--- a/research/article/Rudel2020-ld/index.qmd
+++ b/research/article/Rudel2020-ld/index.qmd
@@ -12,7 +12,7 @@ author:
   affiliation: ''
 categories: 
 - Forest gains
-- Forest transitions
+- Forest transition
 - Latecomer effects
 - Tree plantations
 pub-info:
