--- a/research/incollection/Schneider2016-om/index.qmd
+++ b/research/incollection/Schneider2016-om/index.qmd
@@ -11,7 +11,7 @@ author:
 categories:
   - 'Fires'
   - 'Tropical forest'
-  - 'Hurricanes'
+  - 'Hurricane'
   - 'Yucatan'
 pub-info:
   reference: "Schneider, L. C., Rogan, J., & Schmook, B. (2016). Relación de huracanes e incendios en bosques fragmentados de la región sur de la península de Yucatán, México: ejemplo de las sinergias en sistemas socio-ecológicos. In J. C. Postigo & K. R. Young (Eds.), Naturaleza y sociedad: Perspectivas socio-ecológicas sobre cambios globales en América Latina. IEP;  INTE-PUCP."
