--- a/research/article/Lerner2015-hf/index.qmd
+++ b/research/article/Lerner2015-hf/index.qmd
@@ -12,8 +12,8 @@ author:
   affiliation: ''
 categories:
   - Landscape
-  - Silvo-pastoral
-  - Ecuadro
+  - Silvopastoral
+  - Ecuador
   - Amazon
 pub-info:
   reference: 'Lerner, A. M., Rudel, T. K., Schneider, L. C., McGroddy, M., Burbano, D. V., &amp; Mena, C. F. (2015). The spontaneous emergence of silvo-pastoral landscapes in the Ecuadorian Amazon: patterns and processes. <em>Regional Environmental Change</em>, <em>15</em>(7), 1421&ndash;1431.'
